tests/errors/refutable-let/main.pa
def main = fun {
  let some x = some 5
  print (to-string x)
}
